Documentation update for web hosting

--- a/docs/Sources.bib
+++ b/docs/Sources.bib
@@ -1,4 +1,4 @@
-% BioGears references
+Methodology Sources and References
 
 @Article{abbas2003echocardiographic,
   Title                    = {Echocardiographic Determination of Mean Pulmonary Artery Pressure},
